fix error extra margin

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -83,9 +83,9 @@ section.Section-about .About-History .About-HistoryElement {
   font-size: 1.5em;
 }
 .Skill-Container {
-  height: 300px;
+  min-height: 300px;
   position: relative;
-  padding: 20px;
+  padding: 0;
 }
 .Skill-ContainerContent {
   position: absolute;
@@ -93,6 +93,7 @@ section.Section-about .About-History .About-HistoryElement {
   min-height: 100%;
   opacity: 0.2;
   transition: all 0.3s ease-in;
+  padding: 10px;
 }
 .Skill-ContainerElement {
   float: left;
@@ -103,7 +104,7 @@ section.Section-about .About-History .About-HistoryElement {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   cursor: pointer;
   opacity: 0.8;
   visibility: visible;
