--- a/app/views/Section-work/section_work.styl
+++ b/app/views/Section-work/section_work.styl
@@ -1,13 +1,14 @@
 .Skill-Container
-  height 300px
+  min-height 300px
   position relative
-  padding 20px
+  padding 0
   &Content
     position absolute
     width 100%
     min-height 100%
     opacity 0.2
     transition all 0.3s ease-in
+    padding 10px
   &Element
     float left
     margin 0 10px 10px 0
@@ -16,7 +17,7 @@
     top 0
     left 0
     width 100%
-    height 100%
+    min-height 100%
     cursor pointer
     opacity 0.8
     visibility visible
